// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputWithButton Snapshot should render normal TextInputWithButton 1`] = `
<div>
  <label
    className="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-400"
  >
    label
  </label>
  <div
    className="flex flex-row"
  >
    <div
      className="mr-2 flex-auto"
    >
      <input
        className="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
        onChange={[Function]}
        placeholder="placeholder"
        type="password"
      />
    </div>
    <button
      className="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
      onClick={[Function]}
      type="button"
    >
      button label
    </button>
  </div>
</div>
`;

exports[`TextInputWithButton Snapshot should render normal TextInputWithButton with optional props 1`] = `
<div>
  <label
    className="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-400"
    htmlFor="htmlFor"
  >
    label
  </label>
  <div
    className="flex flex-row"
  >
    <div
      className="mr-2 flex-auto"
    >
      <input
        className="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
        id="id"
        onChange={[Function]}
        placeholder="placeholder"
        type="password"
      />
    </div>
    <button
      className="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
      onClick={[Function]}
      type="button"
    >
      button label
    </button>
  </div>
</div>
`;
